# okik

./: .gitignore  README  README.md  __init__.py  endpoints.py  logger.py  machines.py  main.py  pyproject.toml  requirements.txt  setup.py
okik/: __init__.py  endpoints.py  machines.py  main.py
okik.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
okik/scripts/dockerfiles/: Dockerfile  dockerfile_gen.py  pyimg.py
okik/utils/: console.py
okik/utils/configs/: machines.py  serviceconfigs.py  yaml_configs.py
